k8s_kind/targeting-service/targeting-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: targeting-service:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            periodSeconds: 15
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            periodSeconds: 15
            initialDelaySeconds: 30
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 512Mi
