k8s_kind/targeting-service/targeting-service-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-targeting-service
  namespace: targeting-ns
spec:
  type: ClusterIP
  selector:
    app: db-targeting-service
  ports:
    - port: 5432
      targetPort: 5432
